--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run start\"",
     "build": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open",
-    "server": "json-server --watch db.json -p 3001"
+    "server": "json-server --watch ./src/db.json -p 3001"
   },
   "repository": {
     "type": "git",
